manifests/plexstack/plex-services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: "null"
    name: jackett-service
    namespace: plexstack
  spec:
    clusterIP: 10.43.194.247
    clusterIPs:
    - 10.43.194.247
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 9117
    selector:
      app: jackett
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: "null"
    name: ombi-service
    namespace: plexstack
  spec:
    clusterIP: 10.43.193.8
    clusterIPs:
    - 10.43.193.8
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 3579
    selector:
      app: ombi
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: "null"
    name: qbittorrent-service
    namespace: plexstack
  spec:
    clusterIP: 10.43.44.42
    clusterIPs:
    - 10.43.44.42
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8080
    selector:
      app: qbittorrent
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: "null"
    name: qbittorrent-rss-service
    namespace: plexstack
  spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8080
    selector:
      app: qbittorrent-rss
    type: LoadBalancer
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: "null"
    name: radarr-service
    namespace: plexstack
  spec:
    clusterIP: 10.43.229.159
    clusterIPs:
    - 10.43.229.159
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 7878
    selector:
      app: radarr
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: "null"
    name: smtp-service
    namespace: plexstack
  spec:
    clusterIP: 10.43.154.166
    clusterIPs:
    - 10.43.154.166
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 25
    selector:
      app: smtp
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: "null"
    name: sonarr-service
    namespace: plexstack
  spec:
    clusterIP: 10.43.245.234
    clusterIPs:
    - 10.43.245.234
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8989
    selector:
      app: sonarr
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: "null"
    name: tautulli-service
    namespace: plexstack
  spec:
    type: LoadBalancer
    clusterIP: 10.43.99.101
    clusterIPs:
    - 10.43.99.101
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8181
    selector:
      app: tautulli
- kind: Service
  apiVersion: v1
  metadata:
    name: lidarr-service
  spec:
    selector:
      app: lidarr
    ports:
    - protocol: TCP
      port: 8686
      targetPort: 8686
    type: ClusterIP
kind: List
metadata:
  resourceVersion: ""
