manifests/plexstack/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
      field.cattle.io/publicEndpoints: '[{"addresses":["10.0.1.41","10.0.1.44","10.0.1.45","10.0.1.46"],"port":443,"protocol":"HTTPS","serviceName":"plex:jackett-service","ingressName":"plex:ingress-jackett","hostname":"jackett.lan.ccrow.org","path":"/","allNodes":false}]'
      kubernetes.io/ingress.class: nginx
    name: ingress-jackett
    namespace: plexstack
  spec:
    rules:
    - host: jackett.lan.ccrow.org
      http:
        paths:
        - backend:
            service:
              name: jackett-service
              port:
                number: 9117
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - jackett.lan.ccrow.org
      secretName: jackett-tls
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      field.cattle.io/publicEndpoints: '[{"addresses":["10.0.1.41","10.0.1.44","10.0.1.45","10.0.1.46"],"port":443,"protocol":"HTTPS","serviceName":"plex:ombi-service","ingressName":"plex:ingress-ombi","hostname":"ombi.ccrow.org","path":"/","allNodes":false}]'
      kubernetes.io/ingress.class: nginx
    name: ingress-ombi
    namespace: plexstack
  spec:
    rules:
    - host: ombi.ccrow.org
      http:
        paths:
        - backend:
            service:
              name: ombi-service
              port:
                number: 3579
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - ombi.ccrow.org
      secretName: ombi-tls
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
      field.cattle.io/publicEndpoints: '[{"addresses":["10.0.1.41","10.0.1.44","10.0.1.45","10.0.1.46"],"port":443,"protocol":"HTTPS","serviceName":"plex:qbittorrent-service","ingressName":"plex:ingress-qbittorrent","hostname":"qbittorrent.lan.ccrow.org","path":"/","allNodes":false}]'
      kubernetes.io/ingress.class: nginx
    name: ingress-qbittorrent
    namespace: plexstack
  spec:
    rules:
    - host: qbittorrent.lan.ccrow.org
      http:
        paths:
        - backend:
            service:
              name: qbittorrent-service
              port:
                number: 8080
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - qbittorrent.lan.ccrow.org
      secretName: qbittorrent-tls
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
      field.cattle.io/publicEndpoints: '[{"addresses":["10.0.1.41","10.0.1.44","10.0.1.45","10.0.1.46"],"port":443,"protocol":"HTTPS","serviceName":"plex:qbittorrent-service","ingressName":"plex:ingress-qbittorrent","hostname":"qbittorrent.lan.ccrow.org","path":"/","allNodes":false}]'
      kubernetes.io/ingress.class: nginx
    name: ingress-qbittorrent-rss
    namespace: plexstack
  spec:
    rules:
    - host: qbittorrent-rss.lan.ccrow.org
      http:
        paths:
        - backend:
            service:
              name: qbittorrent-rss-service
              port:
                number: 8080
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - qbittorrent.lan.ccrow.org
      secretName: qbittorrent-tls-rss
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
      field.cattle.io/publicEndpoints: '[{"addresses":["10.0.1.41","10.0.1.44","10.0.1.45","10.0.1.46"],"port":443,"protocol":"HTTPS","serviceName":"plex:radarr-service","ingressName":"plex:ingress-radarr","hostname":"radarr.lan.ccrow.org","path":"/","allNodes":false}]'
      kubernetes.io/ingress.class: nginx
    name: ingress-radarr
    namespace: plexstack
  spec:
    rules:
    - host: radarr.lan.ccrow.org
      http:
        paths:
        - backend:
            service:
              name: radarr-service
              port:
                number: 7878
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - radarr.lan.ccrow.org
      secretName: radarr-tls
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
      field.cattle.io/publicEndpoints: '[{"addresses":["10.0.1.41","10.0.1.44","10.0.1.45","10.0.1.46"],"port":443,"protocol":"HTTPS","serviceName":"plex:sonarr-service","ingressName":"plex:ingress-sonarr","hostname":"sonarr.lan.ccrow.org","path":"/","allNodes":false}]'
      kubernetes.io/ingress.class: nginx
    name: ingress-sonarr
    namespace: plexstack
  spec:
    rules:
    - host: sonarr.lan.ccrow.org
      http:
        paths:
        - backend:
            service:
              name: sonarr-service
              port:
                number: 8989
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - sonarr.lan.ccrow.org
      secretName: sonarr-tls
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      field.cattle.io/publicEndpoints: '[{"addresses":["10.0.1.41","10.0.1.44","10.0.1.45","10.0.1.46"],"port":443,"protocol":"HTTPS","serviceName":"plex:tautulli-service","ingressName":"plex:ingress-tautulli","hostname":"tautulli.ccrow.org","path":"/","allNodes":false}]'
      kubernetes.io/ingress.class: nginx
    name: ingress-tautulli
    namespace: plexstack
  spec:
    rules:
    - host: tautulli.ccrow.org
      http:
        paths:
        - backend:
            service:
              name: tautulli-service
              port:
                number: 8181
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - tautulli.ccrow.org
      secretName: tautulli-tls
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
      field.cattle.io/publicEndpoints: '[{"addresses":["10.0.1.41","10.0.1.44","10.0.1.45","10.0.1.46"],"port":443,"protocol":"HTTPS","serviceName":"plex:sonarr-service","ingressName":"plex:ingress-sonarr","hostname":"sonarr.lan.ccrow.org","path":"/","allNodes":false}]'
      kubernetes.io/ingress.class: nginx
    name: ingress-lidarr
    namespace: plexstack
  spec:
    rules:
    - host: lidarr.lan.ccrow.org
      http:
        paths:
        - backend:
            service:
              name: lidarr-service
              port:
                number: 8686
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - lidarr.lan.ccrow.org
      secretName: lidarr-tls
kind: List
metadata:
  resourceVersion: ""
