manifests/plexstack/jackett.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: jackett
  name: jackett-deployment
  namespace: plexstack
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jackett
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jackett
    spec:
      containers:
      - env:
        - name: PUID
          value: "999"
        - name: PGID
          value: "999"
        image: ghcr.io/linuxserver/jackett
        imagePullPolicy: Always
        name: jackett
        ports:
        - containerPort: 9117
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: jackett-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: jackett-config
        persistentVolumeClaim:
          claimName: jackett-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jackett-service
  namespace: plexstack
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 9117
  selector:
    app: jackett
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
  labels:
  name: ingress-jackett
  namespace: plexstack
spec:
  ingressClassName: nginx
  rules:
  - host: jackett.lan.ccrow.org
    http:
      paths:
      - backend:
          service:
            name: jackett-service
            port:
              number: 9117
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jackett.lan.ccrow.org
    secretName: jackett-tls
