manifests/plexstack/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr-deployment
  namespace: plexstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      imagePullSecrets:
      - name: registry-secret
      containers:
        - name: prowlarr
          image: registry.lan.ccrow.org/ghcr.io/hotio/prowlarr
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-service
  namespace: plexstack
spec:
  selector:
    app: prowlarr
  ports:
    - protocol: TCP
      port: 9696
      targetPort: 9696
  type: ClusterIP  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    nginx.ingress.kubernetes.io/auth-url: |-
        http://ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: |-
        https://prowlarr.lan.ccrow.org/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
        Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
        proxy_set_header X-Forwarded-Host $http_host;    
  labels:
    app.kubernetes.io/instance: prod-plexstack
  name: ingress-prowlarr
  namespace: plexstack
spec:
  ingressClassName: nginx
  rules:
  - host: prowlarr.lan.ccrow.org
    http:
      paths:
      - backend:
          service:
            name: prowlarr-service
            port:
              number: 9696
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prowlarr.lan.ccrow.org
    secretName: prowlarr-tls
