manifests/plexstack/qbittorrent.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: qbittorrent
    app.kubernetes.io/instance: prod-plexstack
  name: qbittorrent-deployment
  namespace: plexstack
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: qbittorrent
      annotations:
        backup.velero.io/backup-volumes-excludes: qbittorrent-downloads
    spec:
      imagePullSecrets:
      - name: registry-secret
      tolerations:
        - key: "arch"
          operator: "Equal"
          value: "amd64"
          effect: "NoSchedule"
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - env:
        - name: PUID
          value: "999"
        - name: PGID
          value: "999"
        - name: WEBUI_PORT
          value: "8080"
        image: registry.lan.ccrow.org/ghcr.io/linuxserver/qbittorrent
        imagePullPolicy: Always
        name: qbittorrent
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: qbittorrent-config
        - mountPath: /downloads
          name: qbittorrent-downloads
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: qbittorrent-config
        persistentVolumeClaim:
          claimName: qbittorrent-pvc
      - name: qbittorrent-downloads
        nfs:
          server: 10.0.2.8
          path: /volume1/uberplex/downloads
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: plexstack
spec:
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
  selector:
    app: qbittorrent
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
  labels:
    app.kubernetes.io/instance: prod-plexstack
  name: ingress-qbittorrent
  namespace: plexstack
spec:
  ingressClassName: nginx
  rules:
  - host: qbittorrent.lan.ccrow.org
    http:
      paths:
      - backend:
          service:
            name: qbittorrent-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - qbittorrent.lan.ccrow.org
    secretName: qbittorrent-tls
