manifests/plexstack/sonarr.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    field.cattle.io/publicEndpoints: '[{"addresses":["10.0.1.127","10.0.1.138","10.0.1.142","10.0.1.145"],"port":443,"protocol":"HTTPS","serviceName":"plexstack:sonarr-service","ingressName":"plexstack:ingress-sonarr","hostname":"sonarr.lan.ccrow.org","path":"/","allNodes":false}]'
  labels:
    app: sonarr
    app.kubernetes.io/instance: prod-plexstack
  name: sonarr-deployment
  namespace: plexstack
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sonarr
      annotations:
        backup.velero.io/backup-volumes-excludes: sonarr-norepl,sonarr-tv,sonarr-downloads
    spec:
      containers:
      - env:
        - name: PUID
          value: "999"
        - name: PGID
          value: "999"
        image: ghcr.io/linuxserver/sonarr:latest
        imagePullPolicy: IfNotPresent
        name: sonarr
        ports:
        - containerPort: 8989
          protocol: TCP
        resources:
          requests:
            cpu: "1"
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /plex-norepl
          name: sonarr-norepl
        - mountPath: /config
          name: sonarr-config
        - mountPath: /tv
          name: sonarr-tv
        - mountPath: /downloads
          name: sonarr-downloads
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: sonarr-pvc
      - name: sonarr-tv
        nfs:
          server: 10.0.1.8
          path: /volume1/TV
      - name: sonarr-downloads
        nfs:
          server: 10.0.1.8
          path: /volume1/uberplex/downloads
      - name: sonarr-norepl
        nfs:
          server: 10.0.1.8
          path: /volume1/Plex-norepl/tv
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
  name: sonarr-service
  namespace: plexstack
spec:
  ports:
  - port: 8989
  selector:
    app: sonarr
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/instance: prod-plexstack
  name: ingress-sonarr
  namespace: plexstack
spec:
  ingressClassName: nginx
  rules:
  - host: sonarr.lan.ccrow.org
    http:
      paths:
      - backend:
          service:
            name: sonarr-service
            port:
              number: 8989
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sonarr.lan.ccrow.org
    secretName: sonarr-tls
