manifests/plexstack/tautulli.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    field.cattle.io/publicEndpoints: '[{"addresses":["10.0.1.127","10.0.1.138","10.0.1.142","10.0.1.145"],"port":443,"protocol":"HTTPS","serviceName":"plexstack:tautulli-service","ingressName":"plexstack:ingress-tautulli","hostname":"tautulli.ccrow.org","path":"/","allNodes":false}]'
  labels:
    app: tautulli
    app.kubernetes.io/instance: prod-plexstack
  name: tautulli-deployment
  namespace: plexstack
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tautulli
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tautulli
    spec:
      containers:
      - env:
        - name: PUID
          value: "999"
        - name: PGID
          value: "999"
        - name: TZ
          value: America/Los_Angeles
        image: ghcr.io/linuxserver/tautulli
        imagePullPolicy: Always
        name: tautulli
        ports:
        - containerPort: 8181
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: tautulli-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: tautulli-config
        persistentVolumeClaim:
          claimName: tautulli-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: prod-plexstack
  name: tautulli-service
  namespace: plexstack
spec:
  ports:
  - port: 8181
  selector:
    app: tautulli
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/instance: prod-plexstack
  name: ingress-tautulli
  namespace: plexstack
spec:
  ingressClassName: nginx
  rules:
  - host: tautulli.ccrow.org
    http:
      paths:
      - backend:
          service:
            name: tautulli-service
            port:
              number: 8181
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tautulli.ccrow.org
    secretName: tautulli-tls
