manifests/plexstack/whisparr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisparr-deployment
  namespace: plexstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whisparr
  template:
    metadata:
      labels:
        app: whisparr
      annotations:
        backup.velero.io/backup-volumes-excludes: whisparr-data,whisparr-downloads
    spec:
      imagePullSecrets:
      - name: registry-secret
      containers:
        - name: whisparr
          image: registry.lan.ccrow.org/ghcr.io/hotio/whisparr
          ports:
            - containerPort: 6969
          volumeMounts:
            - name: whisparr-config
              mountPath: /config
            - name: whisparr-data
              mountPath: /data
            - name: whisparr-downloads
              mountPath: /downloads
      volumes:
        - name: whisparr-config
          persistentVolumeClaim:
            claimName: whisparr-config-pvc
        - name: whisparr-data
          nfs:
            server: 10.0.2.8
            path: /volume1/yml/whisparr
        - name: whisparr-downloads
          nfs:
            server: 10.0.2.8
            path: /volume1/uberplex/downloads
---
apiVersion: v1
kind: Service
metadata:
  name: whisparr-service
  namespace: plexstack
spec:
  selector:
    app: whisparr
  ports:
    - protocol: TCP
      port: 6969
      targetPort: 6969
  type: ClusterIP  # or NodePort, depending on your needs
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
  labels:
    app.kubernetes.io/instance: prod-plexstack
  name: ingress-whisparr
  namespace: plexstack
spec:
  ingressClassName: nginx
  rules:
  - host: whisparr.lan.ccrow.org
    http:
      paths:
      - backend:
          service:
            name: whisparr-service
            port:
              number: 6969
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - whisparr.lan.ccrow.org
    secretName: whisparr-tls
