manifests/plexstack/ombi.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: ombi
    app.kubernetes.io/instance: prod-plexstack
  name: ombi-deployment
  namespace: plexstack
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ombi
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ombi
    spec:
      imagePullSecrets:
      - name: registry-secret
      containers:
      - env:
        - name: PUID
          value: "999"
        - name: PGID
          value: "999"
        image: registry.lan.ccrow.org/ghcr.io/linuxserver/ombi
        imagePullPolicy: Always
        name: ombi
        ports:
        - containerPort: 3579
          protocol: TCP
        resources:
          requests:
            cpu: "1"
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: ombi-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: ombi-config
        persistentVolumeClaim:
          claimName: ombi-pvc
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/publicEndpoints: "null"
  labels:
    app.kubernetes.io/instance: prod-plexstack
  name: ombi-service
  namespace: plexstack
spec:
  ports:
  - port: 3579
  selector:
    app: ombi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    nginx.ingress.kubernetes.io/auth-url: |-
        http://ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: |-
        https://ombi.ccrow.org/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
        Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
        proxy_set_header X-Forwarded-Host $http_host;

  labels:
    app.kubernetes.io/instance: prod-plexstack
  name: ingress-ombi
  namespace: plexstack
spec:
  ingressClassName: nginx
  rules:
  - host: ombi.ccrow.org
    http:
      paths:
      - backend:
          service:
            name: ombi-service
            port:
              number: 3579
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ombi.ccrow.org
    secretName: ombi-tls
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: plexstack-internet
  namespace: plexstack
spec:
  podSelector:
    matchLabels:
      app: ombi
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: rke2-ingress-nginx
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: authentik
          podSelector:
            matchLabels:
              app: authentik-outpost
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: heimdall
          podSelector:
            matchLabels:
              app: heimdall
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: authentik
          podSelector:
            matchLabels:
              app: authentik-outpost
      ports:
        - port: 9000
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: plex
          podSelector:
            matchLabels:
              app: plexserver
      ports:
        - port: 32400        
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
    - to:
        - podSelector:
            matchLabels:
              app: smtp
    - to:
        - podSelector:
            matchLabels:
              app: radarr
    - to:
        - podSelector:
            matchLabels:
              app: sonarr
    - to:
        - podSelector:
            matchLabels:
              app: lidarr
